--- a/CleanCode/pom.xml
+++ b/CleanCode/pom.xml
@@ -27,6 +27,7 @@
                     <formats>
                         <format>xml</format>
                     </formats>
+                    <check/>
                 </configuration>
                 <executions>
                     <execution>
