--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
+.idea/
+*.iml
+out/
+gen/
+idea-gitignore.jar
+resources/templates.list
+resources/gitignore/*
+build/
+build.properties
+junit*.properties
+IgnoreLexer.java~
+.gradle
+.DS_Store
+
+/verification
+
 *.db
 *.log
 /target
 /bin
-*.mine
-.idea
-.iml
-target
