--- a/TestingFramework/src/test/resources/staging.properties
+++ b/TestingFramework/src/test/resources/staging.properties
@@ -1,3 +1,5 @@
 testdata.user.name=xaxin41716@yektara.com
 testdata.user.password=123456789
 testdata.product.link=https://7745.by/product/366801
+testdata.product.link_second=https://7745.by/product/494094
+testdata.place.delivery=Гомель
