--- a/TestingFramework/pom.xml
+++ b/TestingFramework/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.11.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>3.0.0-M5</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
@@ -65,6 +70,15 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+			<plugin>  <groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<target>1.8</target>
+					<source>1.8</source>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
