--- a/TestingFramework/pom.xml
+++ b/TestingFramework/pom.xml
@@ -79,6 +79,16 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<argLine>
+						-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
