--- a/TestingFramework/src/test/resources/qa.properties
+++ b/TestingFramework/src/test/resources/qa.properties
@@ -3,3 +3,4 @@ testdata.user.password=123456789
 testdata.product.link=https://7745.by/product/366801
 testdata.product.link_second=https://7745.by/product/494094
 testdata.place.delivery=Гомель
+testdata.query=Samsung
