--- a/TestingFramework/src/test/resources/qa.properties
+++ b/TestingFramework/src/test/resources/qa.properties
@@ -4,3 +4,8 @@ testdata.product.link=https://7745.by/product/366801
 testdata.product.link_second=https://7745.by/product/494094
 testdata.place.delivery=Гомель
 testdata.query=Samsung
+testdata.catalog.link=https://7745.by/catalog/televizory
+testdata.catalog.manufacturer=PANASONIC
+testdata.promo.item.link=https://7745.by/product/044149
+testdata.promo.promocode=Под ёлку
+testdata.promo.percent=10
